fix, language, render data - fix header: z-index - change language BookingModal - BookingModal:    + create buildDataGender()    + onChange: handleOnChangeInput()    + onClick handleConfirmBooking()    + onChange handleChangeSelect()    + onChange handleOnChangeDatePicker() - data: postPatientBookingAppointment()

--- a/src/containers/HomePage/HomeHeader.scss
+++ b/src/containers/HomePage/HomeHeader.scss
@@ -9,7 +9,7 @@
         display: flex;
         padding: 0 20px;
         position: fixed;
-        z-index: 9999;
+        z-index: 999;
         background: white;
         box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.18);
 
